# world.status

./: .gitignore  CMakeLists.txt  README.md  build.boost.bat  build.boost.sh  build.cmake.sh  build.duckdb.sh  build.wt.sh
src/: spatial.cc  spatial.hh  world.cc  worldmap.cc
